--- a/task_1_3.ipynb
+++ b/task_1_3.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "2     3276743"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "2  1768   B"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -374,7 +374,7 @@
        "2  5695057   B"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "set()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -453,11 +453,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DIMA\\AppData\\Local\\Temp\\ipykernel_11688\\4005169911.py:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\DIMA\\AppData\\Local\\Temp\\ipykernel_12544\\4005169911.py:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  groups.append(group_add).grp.value_counts()\n",
-      "C:\\Users\\DIMA\\AppData\\Local\\Temp\\ipykernel_11688\\4005169911.py:2: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\DIMA\\AppData\\Local\\Temp\\ipykernel_12544\\4005169911.py:2: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  pd.DataFrame({'counts': groups.append(group_add).grp.value_counts(),\n",
-      "C:\\Users\\DIMA\\AppData\\Local\\Temp\\ipykernel_11688\\4005169911.py:3: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\DIMA\\AppData\\Local\\Temp\\ipykernel_12544\\4005169911.py:3: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  'normal': groups.append(group_add).grp.value_counts(normalize=True).round(2)})\n"
      ]
     },
@@ -507,7 +507,7 @@
        "A   14693     0.2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "2       25973  690.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
        "990.0       41       0.08"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "149"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -816,9 +816,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DIMA\\AppData\\Local\\Temp\\ipykernel_11688\\683246622.py:3: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\DIMA\\AppData\\Local\\Temp\\ipykernel_12544\\683246622.py:3: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  pd.DataFrame({'counts': groups.append(group_add).query(\"id in @list_ids\").grp.value_counts(),\n",
-      "C:\\Users\\DIMA\\AppData\\Local\\Temp\\ipykernel_11688\\683246622.py:4: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\DIMA\\AppData\\Local\\Temp\\ipykernel_12544\\683246622.py:4: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  'normal': groups.append(group_add).query(\"id in @list_ids\").grp.value_counts(normalize=True).round(2)})\n"
      ]
     },
@@ -868,7 +868,7 @@
        "A      29    0.19"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
        "2     4238589  NaN     A"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
        "A    1535    0.18"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {
     "scrolled": false
    },
@@ -1182,7 +1182,7 @@
        "840.0000       24    0.06"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
        "990.0       22    0.06"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1311,7 @@
     "\n",
     "- **CR** - конверсия\n",
     "- **ARPPU** - средний доход с каждого платящего пользователя\n",
-    "- **ARPU** - средний доход с каждого пользователя"
+    "- **ARPAU** - средний доход с каждого активного пользователя"
    ]
   },
   {
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -1383,7 +1383,7 @@
        "<AxesSubplot:xlabel='group', ylabel='Count'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1472,7 @@
        "1        78   313"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
        "(0.526607176998989, 0.46803677583199144)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {
     "scrolled": false
    },
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {
     "scrolled": false
    },
@@ -1570,10 +1570,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x2d092d55af0>"
+       "<seaborn.axisgrid.FacetGrid at 0x1e6ad138160>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {
     "scrolled": false
    },
@@ -1619,10 +1619,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x2d092e456a0>"
+       "<seaborn.axisgrid.FacetGrid at 0x1e6ad910be0>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1678,7 +1678,7 @@
        "LeveneResult(statistic=0.19024733130895616, pvalue=0.6629528098544764)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {
     "scrolled": true
    },
@@ -1709,7 +1709,7 @@
        "0.00026569811952692544"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1744,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1786,16 +1786,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x2d09243b310>"
+       "<seaborn.axisgrid.FacetGrid at 0x1e6acfa0bb0>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1828,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1848,15 +1848,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Доверительный интервал для группы A:  [34.9703688888192, 64.51831155945901]\n",
-      "Доверительный интервал для группы В:  [50.67969585545566, 65.63196748835111]\n"
+      "Доверительный интервал для группы A:  [34.834379109678586, 65.04777096871778]\n",
+      "Доверительный интервал для группы В:  [50.91468503001471, 65.75206587608228]\n"
      ]
     }
    ],
@@ -1937,14 +1937,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DIMA\\AppData\\Local\\Temp\\ipykernel_11688\\809769303.py:26: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\DIMA\\AppData\\Local\\Temp\\ipykernel_12544\\809769303.py:26: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  group_all = rename_col(df).append(rename_col(df_add)).drop_duplicates().dropna()\n"
      ]
     },
@@ -1981,8 +1981,8 @@
       "H0 - различия не являются статистически значимыми\n",
       "H1 - различия являются статистически значимыми\n",
       "доверительные интервалы:\n",
-      "ARPAU_A = [34.99828510226197, 65.02803602544391]\n",
-      "ARPAU_B = [50.95808354650258, 66.16959073389155]\n",
+      "ARPAU_A = [34.81864882488623, 64.55930425183965]\n",
+      "ARPAU_B = [51.04549357222324, 66.02707789641873]\n",
       "доверительные интервалы пересекаются\n",
       "нет оснований отклонить нулевую гипотезу\n",
       "различия не являются статистически значимыми\n",
@@ -2188,7 +2188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
